--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -30,7 +30,8 @@
     "describeplace" : "Describa el mejor lugar para colocar la caja de seguridad de Luna Enterprises",
     "describe" : "describir",
     "timeframe" : "Plazo de venta de la propiedad?",
-    "eg" : "Por ejemplo, 3 días",
+    "eg" : "Por ejemplo, 14 días",
+    "fastcash" : "Necesita dinero rápido para ayudar con la mudanza u otros gastos?",
     "payment" : "Pago",
     "cash" : "Dinero",
     "check" : "Controlar",
